<resources>
    <string name="app_name">Trabajo Intents</string>
    <string name="tv_titulo1">Ejercicio 1</string>
    <string name="tv_titulo2">Ejercicio 2</string>
    <string name="et_usuario">Usuario</string>
    <string name="ps_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_atras">Atras</string>
    <string name="et_datos">Ingrese nuevo titulo de pantallas</string>
    <string name="btn_returnhome">Inicio</string>
    <string name="pantalla1">PANTALLA 1</string>
    <string name="pantalla2">PANTALLA 2</string>
    <string name="pantalla3">PANTALLA 3</string>
    <string name="pantalla4">PANTALLA 4</string>
    <string name="btn_anterior">Anterior</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="tv_mensaje">Pulse SIGUIENTE para continuar</string>
</resources>
