<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ejercicio1_1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/tv_titulo1"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/et_usuario"
        android:textSize="48sp" />


    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.20" />

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:onClick="Atras"
        android:text="@string/btn_atras" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:text="@string/btn_returnhome"
        android:onClick="GoToInicio"/>

</LinearLayout>